# compile-time-python

./: .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  NOTICE  PLAN.md  README.md  ctpy.cppm
.github/workflows/: tests.yml
examples/: CMakeLists.txt  Makefile  README.md  config  config.cpp  fib  fib.cpp  hello  hello.cpp
include/: ctc.hpp  ctpy.hpp
include/ctc/: array.hpp  deque.hpp  forward_list.hpp  list.hpp  map.hpp  pair.hpp  queue.hpp  set.hpp  stack.hpp  string.hpp  unordered_map.hpp  unordered_set.hpp  utility.hpp  vector.hpp
include/ctpy/: actions.hpp  ast.hpp  bind.hpp  builtins.hpp  diag.hpp  eval.hpp  exec.hpp  fstring.hpp  object.hpp  parse.hpp  prelex.hpp  python.hpp  python.lark  result.hpp  text.hpp  version.hpp  views.hpp
packaging/: pkgconfig.pc.in
single-header/: ctpy.hpp
tests/: CMakeLists.txt  builtins.cpp  containers.cpp  control.cpp  diagnostics.cpp  expr.cpp  fstring.cpp  functions.cpp  gen_expected.py  parity.cpp  parity_cases.inc  parse.cpp  prelex.cpp  results_binding.cpp  skeleton.cpp  strmethods.cpp
tools/: amalgamate.py
